@@ -1,5 +1,8 @@
-* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.1.3-0
-- Support puppetlabs/concat 6.x, puppetlabs/stdlib 6.x, and puppet 6.x.
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+- Add puppetlabs-concat 6 support
 
 * Fri Mar 22 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.2-0
 - Use simplib::bracketize in lieu of deprecated Puppet 3 bracketize
